Split the lint task into lint-api, lint-test, and lint-style

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "scripts": {
     "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports spec/gemoji.spec.js",
     "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports spec/gemoji.spec.js",
-    "lint": "node_modules/.bin/eslint index.js --env node --env browser --rule 'quotes: [2, single]' && node_modules/.bin/eslint spec/gemoji.spec.js --env node --env mocha --rule 'quotes: [2, single], no-loop-func: false' && node_modules/.bin/jscs index.js spec/gemoji.spec.js --reporter=inline",
+    "lint": "npm run-script lint-api && npm run-script lint-test && npm run-script lint-style",
+    "lint-api": "node_modules/.bin/eslint index.js --env node --env browser --rule 'quotes: [2, single]'",
+    "lint-test": "node_modules/.bin/eslint spec/gemoji.spec.js --env node --env mocha --rule 'quotes: [2, single], no-loop-func: false'",
+    "lint-style": "node_modules/.bin/jscs index.js spec/gemoji.spec.js --reporter=inline",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- spec spec/gemoji.spec.js",
     "make": "npm run-script lint && npm run-script coverage"
   },
