--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "Titus Wormer <tituswormer@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "istanbul": "~0.2.11",
-    "jscs": "^1.5.3",
-    "eslint": "^0.6.2",
-    "mocha": "~1.20.1"
+    "istanbul": "^0.3.0",
+    "jscs": "^1.6.0",
+    "eslint": "^0.8.0",
+    "mocha": "^1.20.0"
   },
   "repository": {
     "type": "git",
