--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "Titus Wormer <tituswormer@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^0.8.0",
     "istanbul": "^0.3.0",
     "jscs": "^1.6.0",
-    "eslint": "^0.8.0",
+    "markdown-table": "0.0.1",
     "mocha": "^1.20.0"
   },
   "repository": {
@@ -29,9 +30,9 @@
     "lint-test": "node_modules/.bin/eslint spec/gemoji.spec.js --env node --env mocha --rule 'quotes: [2, single], no-loop-func: false'",
     "lint-style": "node_modules/.bin/jscs index.js build-data.js build-supported-gemoji.js spec/gemoji.spec.js --reporter=inline",
     "scrape-data": "curl --connect-timeout 5 --max-time 10 -H 'Accept: application/vnd.github.v3.raw' -L https://api.github.com/repos/github/gemoji/contents/db/emoji.json -o data/emoji.json || exit 0",
-    "build-data" : "node build-data.js",
-    "build-supported-gemoji" : "node build-supported-gemoji.js",
-    "prepublish" : "npm run scrape-data && npm run build-data && npm run build-supported-gemoji",
+    "build-data": "node build-data.js",
+    "build-supported-gemoji": "node build-supported-gemoji.js",
+    "prepublish": "npm run scrape-data && npm run build-data && npm run build-supported-gemoji",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- spec/gemoji.spec.js",
     "make": "npm run-script lint && npm run-script coverage && npm run build-supported-gemoji"
   }
