Update .gitignore, .npmignore, bower ignore

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,10 @@
     ".*",
     "*.log",
     "*.md",
+    "data/emoji.json",
     "component.json",
+    "components",
+    "build",
     "package.json",
     "coverage",
     "node_modules",
