Update `.gitignore`, `.npmignore`, bower ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-node_modules
-bower_components
-components
-build
-.DS_Store
-coverage
+.DS_STORE
 *.log
+bower_components/
+build/
+components/
+coverage/
+node_modules/
