--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,15 @@
-node_modules
-bower_components
-components
-build
-.DS_Store
-coverage
+.*
 *.log
-.travis.yml
+bower_components/
+build/
+components/
+coverage/
+node_modules/
+build-data.js
+build-supported-gemoji.js
+test.js
+bower.json
+component.json
 data/emoji.json
+History.md
+Supported-Gemoji.md
