--- a/bower.json
+++ b/bower.json
@@ -25,8 +25,7 @@
     "components/",
     "coverage/",
     "node_modules/",
-    "build-data.js",
-    "build-supported-gemoji.js",
+    "script/",
     "test.js",
     "component.json",
     "package.json",
