--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports test.js",
     "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports test.js",
     "lint": "npm run-script lint-api && npm run-script lint-test && npm run-script lint-style",
-    "lint-api": "node_modules/.bin/eslint index.js build-data.js",
+    "lint-api": "node_modules/.bin/eslint index.js script/build-data.js",
     "lint-test": "node_modules/.bin/eslint test.js --env mocha",
-    "lint-style": "node_modules/.bin/jscs index.js build-data.js build-supported-gemoji.js test.js --reporter=inline",
+    "lint-style": "node_modules/.bin/jscs index.js script/build-data.js script/build-supported-gemoji.js test.js --reporter=inline",
     "scrape-data": "curl --connect-timeout 5 --max-time 10 -H 'Accept: application/vnd.github.v3.raw' -L https://api.github.com/repos/github/gemoji/contents/db/emoji.json -o data/emoji.json || exit 0",
-    "build-data": "node build-data.js",
-    "build-supported-gemoji": "node build-supported-gemoji.js",
+    "build-data": "node script/build-data.js",
+    "build-supported-gemoji": "node script/build-supported-gemoji.js",
     "prepublish": "npm run scrape-data && npm run build-data && npm run build-supported-gemoji",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test.js",
     "make": "npm run-script lint && npm run-script coverage && npm run build-supported-gemoji"
