Refactor module, interface for more emoji information
This commit significantly changes the module to expose more
information regarding gemoji. Information is still accessible
through the `unicode` and `name` properties on the exported
object, but the exposed information is now an object.

These information objects include a list of names, tags, and a
description.

--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,17 @@
 {
   "name": "gemoji",
   "main": "index.js",
-  "description": "Named and unicode Gemoji",
+  "description": "Information regarding (GitHub) emoji: gemoji",
   "license": "MIT",
   "keywords": [
     "gemoji",
     "emoji",
     "unicode",
     "name",
-    "shortcode"
+    "shortcode",
+    "tag",
+    "alias",
+    "name"
   ],
   "repository": {
     "type": "git",
