Add shorter description to `Readme.md`, `package.json`, `component.json`, `bower.json`

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "gemoji",
   "main": "index.js",
-  "description": "Information regarding (GitHub) emoji: gemoji",
+  "description": "GitHub emoji: gemoji",
   "license": "MIT",
   "keywords": [
     "gemoji",
