--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports test.js",
     "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports test.js",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test.js",
-    "lint": "npm run-script lint-api && npm run-script lint-test && npm run-script lint-style",
+    "lint": "npm run lint-api && npm run lint-test && npm run lint-style",
     "lint-api": "node_modules/.bin/eslint index.js",
     "lint-test": "node_modules/.bin/eslint test.js --env mocha",
     "lint-script": "node_modules/.bin/eslint script/build-data.js script/build-support.js",
     "lint-style": "node_modules/.bin/jscs index.js script/build-data.js script/build-support.js test.js --reporter=inline",
-    "make": "npm run-script lint && npm run-script coverage && npm run build-support",
+    "make": "npm run lint && npm run coverage && npm run build-support",
     "scrape-data": "curl --connect-timeout 5 --max-time 10 -H 'Accept: application/vnd.github.v3.raw' -L https://api.github.com/repos/github/gemoji/contents/db/emoji.json -o data/emoji.json || exit 0",
     "build-data": "node script/build-data.js",
     "build-support": "node script/build-support.js",
