--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^0.11.0",
     "istanbul": "^0.3.0",
     "jscs": "^1.0.0",
+    "jscs-jsdoc": "^0.4.0",
     "markdown-table": "0.3.0",
     "mocha": "^2.0.0"
   },
