--- a/package.json
+++ b/package.json
@@ -13,32 +13,44 @@
     "alias",
     "name"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wooorm/gemoji.git"
-  },
+  "repository": "wooorm/gemoji",
   "author": "Titus Wormer <tituswormer@gmail.com>",
+  "files": [
+    "index.js",
+    "data/gemoji.json"
+  ],
   "devDependencies": {
-    "eslint": "^0.11.0",
+    "browserify": "^11.0.0",
+    "eslint": "^1.0.0",
+    "esmangle": "^1.0.0",
     "istanbul": "^0.3.0",
-    "jscs": "^1.0.0",
-    "jscs-jsdoc": "^0.4.0",
-    "markdown-table": "0.3.0",
-    "mocha": "^2.0.0"
+    "jscs": "^2.0.0",
+    "jscs-jsdoc": "^1.0.0",
+    "markdown-table": "^0.4.0",
+    "mdast": "^1.0.0",
+    "mdast-comment-config": "^1.0.0",
+    "mdast-github": "^1.0.0",
+    "mdast-lint": "^1.0.0",
+    "mdast-slug": "^1.0.0",
+    "mdast-validate-links": "^1.0.0",
+    "mocha": "^2.0.0",
+    "string-width": "^1.0.1"
   },
   "scripts": {
-    "test": "_mocha --check-leaks test.js",
-    "test-travis": "istanbul cover _mocha --report lcovonly -- --check-leaks test.js",
-    "coverage": "istanbul cover _mocha -- -- test.js",
-    "lint-api": "eslint index.js",
-    "lint-test": "eslint --env mocha test.js",
-    "lint-script": "eslint script/build-data.js script/build-support.js",
-    "lint-style": "jscs --reporter inline index.js test.js script/build-data.js script/build-support.js",
-    "lint": "npm run lint-api && npm run lint-test && npm run lint-script && npm run lint-style",
-    "make": "npm run lint && npm run coverage",
-    "prebuild": "curl --connect-timeout 5 --max-time 10 -H 'Accept: application/vnd.github.v3.raw' -L https://api.github.com/repos/github/gemoji/contents/db/emoji.json -o data/emoji.json || exit 0",
-    "build": "node script/build-data.js",
-    "postbuild": "node script/build-support.js",
-    "prepublish": "npm run build"
+    "test-api": "mocha --check-leaks test.js",
+    "test-coverage": "istanbul cover _mocha -- test.js",
+    "test-travis": "npm run test-coverage",
+    "test": "npm run test-api",
+    "lint-api": "eslint .",
+    "lint-style": "jscs --reporter inline .",
+    "lint": "npm run lint-api && npm run lint-style",
+    "make": "npm run lint && npm run test-coverage",
+    "prebuild-data": "curl --connect-timeout 5 --max-time 10 -H 'Accept: application/vnd.github.v3.raw' -L https://api.github.com/repos/github/gemoji/contents/db/emoji.json -o data/emoji.json || exit 0",
+    "build-data": "node script/build-data.js",
+    "postbuild-data": "node script/build-support.js",
+    "bundle": "browserify index.js --no-builtins -s gemoji > gemoji.js",
+    "postbundle": "esmangle gemoji.js > gemoji.min.js",
+    "build-md": "mdast . --quiet",
+    "build": "npm run build-data && npm run bundle && npm run build-md"
   }
 }
