Add new aliases
* Add a few new aliases;
* Rewrite project;
* Remove bower, component, duo support;
* Remove distribution files from source;
* Remove unneeded files;
* Remove superfluous Node targets from Travis;
* Refactor code-style to use `xo`;
* Replace `istanbul` with `nyc`;
* Replace `mocha` with `tape`;
* Update dev-dependencies.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,24 @@
 language: node_js
-script: npm run-script test-travis
 node_js:
-- '0.10'
 - '0.11'
-- '0.12'
-- iojs
+- '5.0'
+- '6.0'
 sudo: false
-after_script: npm install codecov.io && cat ./coverage/lcov.info | codecov
+after_script: bash <(curl -s https://codecov.io/bash)
+deploy:
+  - provider: npm
+    email: tituswormer@gmail.com
+    api_key:
+      secure: J5zX77DY6AwolRljMy+GdwzqfRvM0VLqTP3J8SHap0yM9NKwuY0F1vy7F9Ryzu048q2q8QT0/3yU56rKfDiXjGVlf3sOvbLRkWZRBntl+mJMCmlRjsAyzo5teF6u/vcHB7V4F1/FAFCWfgEDCN6ZO7/DSbt9IdJjcElsHFbUKIw=
+    on:
+      tags: true
+      node: '5.0'
+  - provider: releases
+    api_key:
+      secure: FxpovIE7QobbxBS0Rm6AsoHzVC5uYtuwKly/2SMZD19ff78A+XLoH971jLSAvx0PTul5nNy26drDVTRlgXZznM1DISdJXOEFQhR2O2CpEEFhHxKt/kixndFWfOBxrbH3534CLuTzV1AwXQvC5WE7y7in0zu/E9/ZdC3CA7ux1h8=
+    file:
+      - "lowlight.js"
+      - "lowlight.min.js"
+    on:
+      tags: true
+      node: '6.0'
