--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
     "nyc": "^10.0.0",
     "remark-cli": "^3.0.0",
     "remark-lint-table-pipe-alignment": "^1.0.0",
-    "remark-preset-wooorm": "^2.0.0",
+    "remark-preset-wooorm": "^3.0.0",
     "request": "^2.75.0",
-    "string-width": "^2.0.0",
     "tape": "^4.6.0",
-    "xo": "^0.17.1"
+    "xo": "^0.18.2"
   },
   "scripts": {
     "build-md": "remark readme.md -qfo",
@@ -57,6 +56,7 @@
   },
   "xo": {
     "space": true,
+    "esnext": false,
     "rules": {
       "guard-for-in": "off"
     },
