--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-- '4.0'
-- '9.0'
+- lts/boron
+- node
 sudo: false
 after_script: bash <(curl -s https://codecov.io/bash)
 deploy:
@@ -14,4 +14,3 @@ deploy:
       - "gemoji.min.js"
     on:
       tags: true
-      node: '9.0'
