--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: node_js
 node_js:
-- lts/boron
-- node
+  - lts/dubnium
+  - node
 sudo: false
 after_script: bash <(curl -s https://codecov.io/bash)
 deploy:
   - provider: releases
     skip_cleanup: true
     api_key:
-      secure: FxpovIE7QobbxBS0Rm6AsoHzVC5uYtuwKly/2SMZD19ff78A+XLoH971jLSAvx0PTul5nNy26drDVTRlgXZznM1DISdJXOEFQhR2O2CpEEFhHxKt/kixndFWfOBxrbH3534CLuTzV1AwXQvC5WE7y7in0zu/E9/ZdC3CA7ux1h8=
+      secure: abjmDo2hhoFo4QZzJNIzvAqLDeB+1cPq3Gvi0hlA08GrUpExBhCHf2CRCt/oXw9rcCvMTyPwUvRWdpWbM1MCNvVVPuFmVx3H7TSCDgGCuq9ux1mNSfDSu5DLYnOu7SXiNwGno+vk1LFGPJ1xPY8YxKfl/ApgkJQQDLcdChp62W8=
     file:
-      - "gemoji.js"
-      - "gemoji.min.js"
+      - 'gemoji.js'
+      - 'gemoji.min.js'
     on:
       tags: true
