--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   ],
   "repository": "wooorm/gemoji",
   "bugs": "https://github.com/wooorm/gemoji/issues",
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/wooorm"
+  },
   "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
