--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
   "main": "index.json",
   "devDependencies": {
     "browserify": "^16.0.0",
-    "mdast-zone": "^3.0.0",
+    "mdast-zone": "^4.0.0",
+    "node-fetch": "^2.0.0",
     "nyc": "^15.0.0",
-    "prettier": "^1.0.0",
-    "remark-cli": "^7.0.0",
-    "remark-lint-table-pipe-alignment": "^1.0.0",
-    "remark-preset-wooorm": "^6.0.0",
-    "request": "^2.0.0",
-    "tape": "^4.6.0",
+    "prettier": "^2.0.0",
+    "remark-cli": "^8.0.0",
+    "remark-lint-table-pipe-alignment": "^2.0.0",
+    "remark-preset-wooorm": "^7.0.0",
+    "tape": "^4.0.0",
     "tinyify": "^2.0.0",
     "unist-builder": "^2.0.0",
-    "xo": "^0.25.0"
+    "xo": "^0.29.0"
   },
   "scripts": {
     "generate": "node script/crawl-data && node script/build-data",
@@ -79,7 +79,7 @@
   },
   "remarkConfig": {
     "settings": {
-      "paddedTable": false
+      "tablePipeAlign": false
     },
     "plugins": [
       "preset-wooorm",
