--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
     "xo": "^0.46.0"
   },
   "scripts": {
-    "prepack": "npm run build && npm run format",
-    "build": "rimraf \"*.d.ts\" && tsc && type-coverage",
-    "generate": "node script/crawl-data && node script/build-data",
+    "generate": "node script/crawl-data.js && node script/build-data.js",
+    "prepublishOnly": "npm run build && npm run format",
+    "build": "rimraf \"script/**/*.d.ts\" \"*.d.ts\" && tsc && type-coverage",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
-    "test-api": "node test.js",
-    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test.js",
-    "test": "npm run generate && npm run build && npm run format && npm run test-coverage"
+    "test-api": "node --conditions development test.js",
+    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov npm run test-api",
+    "test": "npm run build && npm run format && npm run test-coverage"
   },
   "prettier": {
     "tabWidth": 2,
