--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "prettier": "^2.0.0",
     "remark-cli": "^11.0.0",
     "remark-preset-wooorm": "^9.0.0",
-    "rimraf": "^3.0.0",
     "tape": "^5.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^4.0.0",
@@ -47,12 +46,12 @@
     "xo": "^0.52.0"
   },
   "scripts": {
-    "generate": "node script/crawl-data.js && node script/build-data.js",
-    "prepublishOnly": "npm run build && npm run format",
-    "build": "rimraf \"script/**/*.d.ts\" \"*.d.ts\" && tsc && type-coverage",
+    "prepack": "npm run build && npm run format",
+    "generate": "node --conditions development script/crawl-data.js && node --conditions development script/build-data.js",
+    "build": "tsc --build --clean && tsc --build && type-coverage",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
     "test-api": "node --conditions development test.js",
-    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov npm run test-api",
+    "test-coverage": "c8 --check-coverage --100 --reporter lcov npm run test-api",
     "test": "npm run generate && npm run build && npm run format && npm run test-coverage"
   },
   "prettier": {
